--- a/src/main/webapp/assets/css/header.css
+++ b/src/main/webapp/assets/css/header.css
@@ -13,7 +13,7 @@ main {
     padding: 15px 20px; font-weight: 700; text-decoration: none;
 }
 .main_menu a:hover {
-    color: #fff; background-color: #333;
+    color: #fff; background-color: #999;
 }
 
 #profile_img {
@@ -48,4 +48,4 @@ main {
 #logout:hover { background-color: rgb(238, 58, 58);}
 .main_menu i {display: inline-block; width: 30px;}
 
-.main_menu a.active {content: #fff; background-color: #333;}
+.main_menu a.active {color: #fff; background-color: #333;}
